add python bytecode to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .env
 checklist.md
 Threat-Report/
+# Ignore Python bytecode files
+__pycache__/
+*.py[cod]
 
 # Ignore the .vscode directory
 .vscode/
