--- a/src/.env-sample
+++ b/src/.env-sample
@@ -1,4 +1,24 @@
+# --- GEKO Environment Configuration Example ---
+# Copy this file to .env and fill in your values.
+
+# OpenCTI Configuration
+OPENCTI_BASE_URL="http://localhost:8080"
+OPENCTI_ADMIN_EMAIL="admin@opencti.io"
+OPENCTI_ADMIN_PASSWORD="changeme"
+OPENCTI_ADMIN_TOKEN="generate-a-uuid-or-long-random-string"
+
+# Python Script Connection URLs
+# These are used by geko-app to connect to the other containers.
+# The hostnames (e.g., 'opencti') are the service names from docker-compose.
 OPENCTI_URL = "<OPENCTI_URL>/graphql"
 OPENCTI_TOKEN = "changeme" # valid OPENCTI key
 ELASTIC_API_URL = "<ELASTIC_API_URL:5601/api/detection_engine/rules/_find"
 ELASTIC_API_KEY = "<ELASTIC_API_KEY>"
+
+# MinIO Configuration
+MINIO_ROOT_USER="admin"
+MINIO_ROOT_PASSWORD="password"
+
+# RabbitMQ Configuration
+RABBITMQ_DEFAULT_USER="guest"
+RABBITMQ_DEFAULT_PASS="guest"
