--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   # --- Elasticsearch instance for SIEM (Kibana, GEKO App) ---
   elasticsearch-siem:
@@ -58,7 +56,7 @@ services:
       - discovery.type=single-node
       - xpack.ml.enabled=false
       - xpack.security.enabled=false # Security is disabled for OpenCTI's internal ES
-      - "ES_JAVA_OPTS=-Xms2g -Xmx2g" # Adjusted memory
+      - "ES_JAVA_OPTS=-Xms${ELASTIC_MEMORY_SIZE} -Xmx${ELASTIC_MEMORY_SIZE}" # Adjusted memory
     restart: always
     ulimits:
       memlock:
