addactors to .env

--- a/src/.env-sample
+++ b/src/.env-sample
@@ -6,6 +6,8 @@ OPENCTI_BASE_URL="http://localhost:8080"
 OPENCTI_ADMIN_EMAIL="admin@opencti.io"
 OPENCTI_ADMIN_PASSWORD="changeme"
 OPENCTI_ADMIN_TOKEN="generate-a-uuid-or-long-random-string"
+TOP_ACTORS = "APT28, XYZABC, Turla, APT29, APT32, APT33, UNC5435, UNC5687, HOUND SPIDER, APT38, APT39, APT40, APT41, APT42"
+
 
 # Python Script Connection URLs
 # These are used by geko-app to connect to the other containers.
