--- a/src/.env-sample
+++ b/src/.env-sample
@@ -1,21 +1,19 @@
 # --- GEKO Environment Configuration Example ---
 # Copy this file to .env and fill in your values.
 
-# OpenCTI Configuration
+#GEKO SCRIPT ENVs
 OPENCTI_BASE_URL="http://localhost:8080"
 OPENCTI_ADMIN_EMAIL="admin@opencti.io"
 OPENCTI_ADMIN_PASSWORD="changeme"
 OPENCTI_ADMIN_TOKEN="generate-a-uuid-or-long-random-string"
-TOP_ACTORS = "APT28, XYZABC, Turla, APT29, APT32, APT33, UNC5435, UNC5687, HOUND SPIDER, APT38, APT39, APT40, APT41, APT42"
 
 
-# Python Script Connection URLs
-# These are used by geko-app to connect to the other containers.
-# The hostnames (e.g., 'opencti') are the service names from docker-compose.
+# GEKO Script ENVs
 OPENCTI_URL = "<OPENCTI_URL>/graphql"
 OPENCTI_TOKEN = "changeme" # valid OPENCTI key
 ELASTIC_API_URL = "<ELASTIC_API_URL:5601/api/detection_engine/rules/_find"
 ELASTIC_API_KEY = "<ELASTIC_API_KEY>"
+TOP_ACTORS = "APT28, XYZABC, Turla, APT29, APT32, APT33, UNC5435, UNC5687, HOUND SPIDER, APT38, APT39, APT40, APT41, APT42"
 
 # MinIO Configuration
 MINIO_ROOT_USER="admin"
