--- a/src/.env.example
+++ b/src/.env.example
@@ -3,4 +3,4 @@ OPENCTI_URL = "http://<OPENCTI_HOST>:8080/graphql"
 OPENCTI_TOKEN = "<OPENCTI_TOKEN>"
 ELASTIC_API_URL = "<ELASTIC_API_URL>:5601/api/detection_engine/rules/_find"
 ELASTIC_API_KEY = "<ELASTIC_API_KEY>"
-TOP_ACTORS = "APT28, XYZABC, Turla, APT29, APT32, APT33, UNC5435, UNC5687, HOUND SPIDER, APT38, APT39, APT40, APT41, APT42" #comma separated
+TOP_ACTORS = "APT28, XYZABC, Turla, APT29, APT32, APT33, HOUND SPIDER, APT40, APT41, APT42" # Comma Separated
