--- a/config/kibana.yml
+++ b/config/kibana.yml
@@ -1,1 +1,9 @@
-xpack.encryptedSavedObjects.encryptionKey: abcdeabcdeabcdeabcdeabcdeabcdeab
+#
+# ** THIS IS AN AUTO-GENERATED FILE **
+#
+
+# Default Kibana configuration for docker target
+server.host: "0.0.0.0"
+server.shutdownTimeout: "5s"
+elasticsearch.hosts: [ "http://es-siem:9200" ]
+xpack.encryptedSavedObjects.encryptionKey: "abcdeabcdeabcdeabcdeabcdeabcdeab"
