--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - xpack.security.enabled=true
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - xpack.security.http.ssl.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      - xpack.encryptedSavedObjects.enabled=true
     ulimits:
       memlock:
         soft: -1
@@ -26,11 +28,10 @@ services:
     image: docker.elastic.co/kibana/kibana:8.18.3 
     container_name: kibana
     environment:
-      # Connects to the 'elasticsearch-siem' service inside Docker
       - ELASTICSEARCH_HOSTS=["http://es-siem:9200"]
-      - ELASTICSEARCH_SERVICEACCOUNTTOKEN=${ELASTICSEARCH_SERVICEACCOUNTTOKEN} #<run the following in elastic to get key> # sudo docker exec -it es-siem ./bin/elasticsearch-service-tokens create elastic/kibana kibana (Run this in ES to generate a token)
-    volumes:
-      - ./config/kibana.yml:/usr/share/kibana/config/kibana.yml
+      - ELASTICSEARCH_SERVICEACCOUNTTOKEN=${ELASTICSEARCH_SERVICEACCOUNTTOKEN}
+      - SERVER_SHUTDOWNTIMEOUT=5s
+      - XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY=abcdeabcdeabcdeabcdeabcdeabcdeab
     ports:
       - "5601:5601"
     depends_on:
