--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,7 +111,7 @@ services:
       - JWT_EXPIRATION=28800
       - NODE_OPTIONS=--max-old-space-size=8096
       - APP__PORT=8080
-      - APP__BASE_URL=http://localhost:8080
+      - APP__BASE_URL=http://opencti:8080
       - APP__ADMIN__EMAIL=${OPENCTI_ADMIN_EMAIL}
       - APP__ADMIN__PASSWORD=${OPENCTI_ADMIN_PASSWORD}
       - APP__ADMIN__TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -167,7 +167,7 @@ services:
   connector-export-stix:
     image: opencti/connector-export-file-stix:${CONNECTOR_VERSION}
     environment:
-      - OPENCTI_URL=http://localhost:8080
+      - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
       - CONNECTOR_ID=4c20cc0f-bbc5-4417-9312-8b075edd90e8
       - CONNECTOR_NAME=Export Stix
@@ -185,7 +185,7 @@ services:
   connector-import-file-stix:
     image: opencti/connector-import-file-stix:rolling
     environment:
-      - OPENCTI_URL=http://localhost:8080
+      - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${MITRE_TOKEN}
       - CONNECTOR_ID=f5e55328-398b-4213-9f5b-44112c981dd9
       - CONNECTOR_NAME=ImportFileStix
@@ -199,7 +199,7 @@ services:
   connector-import-stix:
     image: opencti/connector-import-file-stix:${CONNECTOR_VERSION}
     environment:
-      - OPENCTI_URL=http://localhost:8080
+      - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
       - CONNECTOR_ID=${CONNECTOR_IMPORT_FILE_STIX_ID} # Valid UUIDv4
       - CONNECTOR_TYPE=INTERNAL_IMPORT_FILE
@@ -218,7 +218,7 @@ services:
   connector-analysis:
     image: opencti/connector-import-document:${CONNECTOR_VERSION}
     environment:
-      - OPENCTI_URL=http://localhost:8080
+      - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
       - CONNECTOR_ID=${CONNECTOR_ANALYSIS_ID} # Valid UUIDv4
       - CONNECTOR_TYPE=INTERNAL_ANALYSIS
